build: attestation permission

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     permissions:
       contents: write # Нужно для загрузки файла в раздел Releases
       id-token: write # Нужно для аттестации (подтверждения подлинности)
+      attestations: write
 
     steps:
       - name: Checkout repository
